syntax = "proto3";

option go_package = "./pb";

message OperationResponse {
    bool is_affected = 1;
}

message Product {
    string product_id = 1;
    string name = 2;
    int64 price = 3;
    int64 duration = 4;
    string description = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message ProductCreateRequest {
    string name = 1;
    int64 price = 2;
    int64 duration = 3;
    string description = 4;
}

service ProductService {
    rpc Create(ProductCreateRequest) returns (OperationResponse) {}
}